fix shiftingv.1

--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,8 @@
     border: black;
     border-style: solid;
     position: relative;
+    margin: auto;
+    padding: 0;
 }
 .page-wrapper {
     margin: 2em 3em;
